refactor: complete brand standardization to PrabhaTech, fix CORS origin patterns, and standardize database configuration